--- a/public/css/link.css
+++ b/public/css/link.css
@@ -1115,6 +1115,7 @@
 .auth0-lock.auth0-lock .auth0-lock-header-bg .auth0-lock-header-bg-solid {
   height: 100%;
   opacity: 0.08;
+  background-color: rgb(234, 83, 35);
 }
 .auth0-lock.auth0-lock .auth0-lock-header-welcome {
   font-size: 18px;
@@ -1370,7 +1371,7 @@
   color: rgba(0, 0, 0, 0.87);
 }
 .auth0-lock-actions {
-  display: flex;
+  /*display: flex;*/
 }
 .auth0-lock.auth0-lock .auth0-lock-submit {
   border: 0;
@@ -1378,7 +1379,7 @@
   padding: 14px;
   display: inline-block;
   box-sizing: border-box;
-  width: 50%;
+  width: 100%;
   height: 70px;
   overflow: hidden;
   border-radius: 0 0 0px 5px;
