Setting up Jenkins to deploy CSS to production
Split out the CSS because it was too big for webtask.

Included a simple minifier because it's a basic task. JS is still
inlined.

--- a/public/css/link.css
+++ b/public/css/link.css
@@ -895,6 +895,7 @@
   font-size: 11px;
   font-weight: 600;
   text-transform: uppercase;
+  display: none;
 }
 .auth0-lock.auth0-lock .auth0-global-message.auth0-global-message-error {
   background: #ff3e00;
@@ -2156,3 +2157,4 @@
 input[type="button"] {
   cursor: pointer;
 }
+
