--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -1,38 +1,43 @@
 .navbar-brand .product-name {
-    margin-top: -14px;
-    margin-left: 90px;
-    opacity: 0.54;
-    font-size: 0.8em;
-    width: 300px;
+  margin-top: -14px;
+  margin-left: 90px;
+  opacity: 0.54;
+  font-size: 0.8em;
+  width: 300px;
 }
 
 .loading-state-container {
-    text-align: center;
-    margin-top: calc(50vh - 150px)
+  text-align: center;
+  margin-top: calc(50vh - 150px);
 }
 
-.loading-state-container > *{
-    margin: 0 auto;
+.loading-state-container > * {
+  margin: 0 auto;
 }
 
 .app-container {
-    display: none;
-    margin-bottom: 6em;
+  display: none;
+  margin-bottom: 6em;
 }
 
 #save-result {
-    margin-left: 10px;
+  display: none;
+}
+
+#save-result h4 {
+  margin-top: 5px;
+  margin-bottom: 5px;
 }
 
 .avatar {
-    width: 30px;
-    border-radius: 50%;
-    margin-top: -2px;
-    margin-right: 2px;
+  width: 30px;
+  border-radius: 50%;
+  margin-top: -2px;
+  margin-right: 2px;
 }
 
 @media screen and (max-width: 450px) {
-    .product-name {
-        display: none;
-    }
+  .product-name {
+    display: none;
+  }
 }
