--- a/templates/server/admin.hbs
+++ b/templates/server/admin.hbs
@@ -54,6 +54,10 @@
       <textarea name="html-code" id="code-editor"></textarea>
 
       <h2>Widget Settings</h2>
+
+      <div class="alert" id="save-result">
+      </div>
+
       <div class="form-group">
         <label for="title">Title</label>
         <input name="title" class="form-control" id="title_input" />
@@ -75,11 +79,7 @@
       </div>
 
       
-
-      <span>
-        <button class="btn btn-success" id="save-changes">Save changes</button>
-        <span id="save-result"></span>
-      </span>
+      <button class="btn btn-success" id="save-changes">Save changes</button>
     </form>
 </main>
 
