Add 'Report an issue' button on user dropdown

--- a/templates/server/admin.hbs
+++ b/templates/server/admin.hbs
@@ -31,6 +31,8 @@
             <img src="" alt="" class="avatar">
             <i class="icon-budicon-460"></i></span>
             <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
+              <li><a href="https://github.com/auth0-extensions/auth0-account-link-extension/issues/new" target="_blank">Report an issue</a></li>
+              <li class="separator"></li>
               <li><a href="#" id="logout-btn">Logout</a>
               </li>
             </ul>
