Reduce widget drop-shadow

--- a/public/css/link.css
+++ b/public/css/link.css
@@ -1766,7 +1766,7 @@
     transition: transform 0.6s, opacity 0.6s, -webkit-transform 0.6s;
     -webkit-transition-delay: 0.5s;
     transition-delay: 0.5s;
-    box-shadow: 0 0 40px 4px #111118;
+    box-shadow: 0 0 40px 4px rgba(0,0,0,0.3);
   }
 }
 @media screen and (max-width: 480px) {
