Allow the user to remove Lock's overlay from admin

--- a/templates/server/admin.hbs
+++ b/templates/server/admin.hbs
@@ -80,6 +80,10 @@
         <select name="locale" class="form-control" id="available-locales"></select>
       </div>
 
+      <div class="form-group">
+        <input type="checkbox" id="remove_overlay"/> Remove widget's overlay
+      </div>
+
       
       <button class="btn btn-success" id="save-changes">Save changes</button>
     </form>
